fixed spacing of mobile nav bar

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -15,6 +15,10 @@ a {
     min-height: 85vh;
 }
 
+#logo2 {
+    display: none;
+}
+
 .menu {
     font: white;
 }
@@ -58,6 +62,11 @@ a {
     background-size:100% 100vh;
 }
 
+.pic {
+    height:40vh;
+    width: auto;
+}
+
 .section {
     border: solid;
     border-color: white;
@@ -69,27 +78,39 @@ a {
         height: 100%;
         background-color: black;
     }
+
+    #home {
+        display: none;
+    }
 }
 
 /* put media query to switch to just the bird on mobile devices */
 @media (max-width: 767.98px) { 
+
     .landing {
         position: relative;
         background-image: url("../images/Bright\ Consulting_Logo.jpg");
-        background-repeat:no-repeat;
+        background-repeat:repeat;
         background-size:100% 100vh;
     }  
 
+    #logo1 {
+        display: none;
+    }
+
+    #logo2 {
+        display: inline;
+    }
     #home {
         border: none;
     }
 
     #menu {
-        justify-content: left;
+        /* justify-content: right; */
         background-color: black;
         opacity: .7;
-        /* top: 0;
-        width: 100%; */
+        /* top: 0;*/
+        /* width: 100%; */
     }
 
     #navbarNav {
@@ -106,6 +127,23 @@ a {
 
     .section {
         border: none;
+        color: white;
+        text-align: right;
+        background-color: white;
     }
+
+    .section1 {
+        padding-top: 30vh;
+    }
+
+    .content {
+        background: grey;
+    }
+
+    #menu_toggler {
+        border: solid;
+        border-color: white;
+    }
+    
 
 }
